# libradicl

./: CMakeLists.txt  LICENSE  README.md
include/: Alignment_Record.hpp  Buffer.hpp  Byte_Array.hpp  Header.hpp  RAD_Writer.hpp  Read_Record.hpp  Tags.hpp  Type.hpp  utility.hpp
src/: Buffer.cpp  Byte_Array.cpp  CMakeLists.txt  Header.cpp  RAD_Writer.cpp  Tags.cpp  test.cpp
